syntax = "proto3";

option go_package = "gateway_demo/proto";

import "google/api/annotations.proto";

service Greeter {
    // 定义方法
    rpc SayHello(HelloRequest) returns (HelloResponse) {
        // 写注释
        option (google.api.http) = {
            post: "/v1/hello" // 请求路径和方法
            body: "*"
        };
    };
}

message HelloRequest {
    string name = 1;
}

message HelloResponse {
    string message = 1;
}